--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <link href="/dist/output.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
@@ -13,5 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Archivero disidente</title>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://kit.fontawesome.com/cfdda85fc2.js" crossorigin="anonymous"></script>
+
   </body>
 </html>
