--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <title>Archivero disidente</title>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://kit.fontawesome.com/cfdda85fc2.js" crossorigin="anonymous"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-modal/3.14.3/react-modal.min.js"
+    integrity="sha512-MY2jfK3DBnVzdS2V8MXo5lRtr0mNRroUI9hoLVv2/yL3vrJTam3VzASuKQ96fLEpyYIT4a8o7YgtUs5lPjiLVQ=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"></script>
   </body>
 </html>
